added link section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+		/>
 		<title>Digital Clock</title>
 	</head>
 	<body>
@@ -12,7 +16,7 @@
 			<div id="clock">
 				<div class="time">
 					<span id="hour"></span>
-					<span>Hours</span> 
+					<span>Hours</span>
 				</div>
 				<div class="time">
 					<span id="minute"></span>
@@ -24,6 +28,17 @@
 				</div>
 			</div>
 		</div>
+		<footer>
+			<p>Made by Nutifafa</p>
+			<span>
+				<a href="https://github.com/neophyte-programmer">
+					<i class="uil uil-github-alt"></i>
+				</a>
+				<a href="https://twitter.com/Nutifafa18">
+					<i class="uil uil-twitter-alt"></i>
+				</a>
+			</span>
+		</footer>
 
 		<script src="/app.js"></script>
 	</body>
